fix: white space in cellphone mood

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
-body {
-  width: 100%;
-  height: 100%;
+
+html, body {
   font-family: 'Inter';
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100vw;
+  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 
